antlr/lua/LuaParser.js
// Generated from /home/roman/Dokumente/Sources/plot-cv/lib/grammars/Lua.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var LuaListener = require('./LuaListener').LuaListener;
var LuaVisitor = require('./LuaVisitor').LuaVisitor;

var grammarFileName = 'Lua.g4';


var symbolicNames = [
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  null,
  'NAME',
  'NORMALSTRING',
  'CHARSTRING',
  'LONGSTRING',
  'INT',
  'HEX',
  'FLOAT',
  'HEX_FLOAT',
  'COMMENT',
  'LINE_COMMENT',
  'WS',
  'SHEBANG'
];

var ruleNames = [
  'chunk',
  'block',
  'stat',
  'retstat',
  'label',
  'funcname',
  'varlist',
  'namelist',
  'explist',
  'exp',
  'prefixexp',
  'functioncall',
  'varOrExp',
  'var',
  'varSuffix',
  'nameAndArgs',
  'args',
  'functiondef',
  'funcbody',
  'parlist',
  'tableconstructor',
  'fieldlist',
  'field',
  'fieldsep',
  'operatorOr',
  'operatorAnd',
  'operatorComparison',
  'operatorStrcat',
  'operatorAddSub',
  'operatorMulDivMod',
  'operatorBitwise',
  'operatorUnary',
  'operatorPower',
  'number',
  'string'
];

function LuaParser(input) {
  antlr4.Parser.call(this, input);
  this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
  this.ruleNames = ruleNames;
  this.literalNames = literalNames;
  this.symbolicNames = symbolicNames;
  return this;
}

LuaParser.prototype = Object.create(antlr4.Parser.prototype);
LuaParser.prototype.constructor = LuaParser;

Object.defineProperty(LuaParser.prototype, 'atn', {
  get: function() {
    return atn;
  }
});

LuaParser.EOF = antlr4.Token.EOF;
LuaParser.T__0 = 1;
LuaParser.T__1 = 2;
LuaParser.T__2 = 3;
LuaParser.T__3 = 4;
LuaParser.T__4 = 5;
LuaParser.T__5 = 6;
LuaParser.T__6 = 7;
LuaParser.T__7 = 8;
LuaParser.T__8 = 9;
LuaParser.T__9 = 10;
LuaParser.T__10 = 11;
LuaParser.T__11 = 12;
LuaParser.T__12 = 13;
LuaParser.T__13 = 14;
LuaParser.T__14 = 15;
LuaParser.T__15 = 16;
LuaParser.T__16 = 17;
LuaParser.T__17 = 18;
LuaParser.T__18 = 19;
LuaParser.T__19 = 20;
LuaParser.T__20 = 21;
LuaParser.T__21 = 22;
LuaParser.T__22 = 23;
LuaParser.T__23 = 24;
LuaParser.T__24 = 25;
LuaParser.T__25 = 26;
LuaParser.T__26 = 27;
LuaParser.T__27 = 28;
LuaParser.T__28 = 29;
LuaParser.T__29 = 30;
LuaParser.T__30 = 31;
LuaParser.T__31 = 32;
LuaParser.T__32 = 33;
LuaParser.T__33 = 34;
LuaParser.T__34 = 35;
LuaParser.T__35 = 36;
LuaParser.T__36 = 37;
LuaParser.T__37 = 38;
LuaParser.T__38 = 39;
LuaParser.T__39 = 40;
LuaParser.T__40 = 41;
LuaParser.T__41 = 42;
LuaParser.T__42 = 43;
LuaParser.T__43 = 44;
LuaParser.T__44 = 45;
LuaParser.T__45 = 46;
LuaParser.T__46 = 47;
LuaParser.T__47 = 48;
LuaParser.T__48 = 49;
LuaParser.T__49 = 50;
LuaParser.T__50 = 51;
LuaParser.T__51 = 52;
LuaParser.T__52 = 53;
LuaParser.T__53 = 54;
LuaParser.T__54 = 55;
LuaParser.NAME = 56;
LuaParser.NORMALSTRING = 57;
LuaParser.CHARSTRING = 58;
LuaParser.LONGSTRING = 59;
LuaParser.INT = 60;
LuaParser.HEX = 61;
LuaParser.FLOAT = 62;
LuaParser.HEX_FLOAT = 63;
LuaParser.COMMENT = 64;
LuaParser.LINE_COMMENT = 65;
LuaParser.WS = 66;
LuaParser.SHEBANG = 67;

LuaParser.RULE_chunk = 0;
LuaParser.RULE_block = 1;
LuaParser.RULE_stat = 2;
LuaParser.RULE_retstat = 3;
LuaParser.RULE_label = 4;
LuaParser.RULE_funcname = 5;
LuaParser.RULE_varlist = 6;
LuaParser.RULE_namelist = 7;
LuaParser.RULE_explist = 8;
LuaParser.RULE_exp = 9;
LuaParser.RULE_prefixexp = 10;
LuaParser.RULE_functioncall = 11;
LuaParser.RULE_varOrExp = 12;
LuaParser.RULE_var = 13;
LuaParser.RULE_varSuffix = 14;
LuaParser.RULE_nameAndArgs = 15;
LuaParser.RULE_args = 16;
LuaParser.RULE_functiondef = 17;
LuaParser.RULE_funcbody = 18;
LuaParser.RULE_parlist = 19;
LuaParser.RULE_tableconstructor = 20;
LuaParser.RULE_fieldlist = 21;
LuaParser.RULE_field = 22;
LuaParser.RULE_fieldsep = 23;
LuaParser.RULE_operatorOr = 24;
LuaParser.RULE_operatorAnd = 25;
LuaParser.RULE_operatorComparison = 26;
LuaParser.RULE_operatorStrcat = 27;
LuaParser.RULE_operatorAddSub = 28;
LuaParser.RULE_operatorMulDivMod = 29;
LuaParser.RULE_operatorBitwise = 30;
LuaParser.RULE_operatorUnary = 31;
LuaParser.RULE_operatorPower = 32;
LuaParser.RULE_number = 33;
LuaParser.RULE_string = 34;

function ChunkContext(parser, parent, invokingState) {
  if(parent === undefined) {
    parent = null;
  }
  if(invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = LuaParser.RULE_chunk;
  return this;
}

ChunkContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ChunkContext.prototype.constructor = ChunkContext;

ChunkContext.prototype.block = function() {
  return this.getTypedRuleContext(BlockContext, 0);
};

ChunkContext.prototype.EOF = function() {
  return this.getToken(LuaParser.EOF, 0);
};

ChunkContext.prototype.enterRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.enterChunk(this);
  }
};

ChunkContext.prototype.exitRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.exitChunk(this);
  }
};

ChunkContext.prototype.accept = function(visitor) {
  if(visitor instanceof LuaVisitor) {
    return visitor.visitChunk(this);
  } else {
    return visitor.visitChildren(this);
  }
};

LuaParser.ChunkContext = ChunkContext;

LuaParser.prototype.chunk = function() {
  var localctx = new ChunkContext(this, this._ctx, this.state);
  this.enterRule(localctx, 0, LuaParser.RULE_chunk);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 70;
    this.block();
    this.state = 71;
    this.match(LuaParser.EOF);
  } catch(re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function BlockContext(parser, parent, invokingState) {
  if(parent === undefined) {
    parent = null;
  }
  if(invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = LuaParser.RULE_block;
  return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.stat = function(i) {
  if(i === undefined) {
    i = null;
  }
  if(i === null) {
    return this.getTypedRuleContexts(StatContext);
  } else {
    return this.getTypedRuleContext(StatContext, i);
  }
};

BlockContext.prototype.retstat = function() {
  return this.getTypedRuleContext(RetstatContext, 0);
};

BlockContext.prototype.enterRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.enterBlock(this);
  }
};

BlockContext.prototype.exitRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.exitBlock(this);
  }
};

BlockContext.prototype.accept = function(visitor) {
  if(visitor instanceof LuaVisitor) {
    return visitor.visitBlock(this);
  } else {
    return visitor.visitChildren(this);
  }
};

LuaParser.BlockContext = BlockContext;

LuaParser.prototype.block = function() {
  var localctx = new BlockContext(this, this._ctx, this.state);
  this.enterRule(localctx, 2, LuaParser.RULE_block);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 76;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while(((_la & ~0x1f) == 0 && ((1 << _la) & ((1 << LuaParser.T__0) | (1 << LuaParser.T__2) | (1 << LuaParser.T__3) | (1 << LuaParser.T__4) | (1 << LuaParser.T__6) | (1 << LuaParser.T__7) | (1 << LuaParser.T__9) | (1 << LuaParser.T__13) | (1 << LuaParser.T__16) | (1 << LuaParser.T__17) | (1 << LuaParser.T__19) | (1 << LuaParser.T__26))) !== 0) || _la === LuaParser.NAME) {
      this.state = 73;
      this.stat();
      this.state = 78;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
    this.state = 80;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if(_la === LuaParser.T__18) {
      this.state = 79;
      this.retstat();
    }
  } catch(re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function StatContext(parser, parent, invokingState) {
  if(parent === undefined) {
    parent = null;
  }
  if(invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = LuaParser.RULE_stat;
  return this;
}

StatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatContext.prototype.constructor = StatContext;

StatContext.prototype.varlist = function() {
  return this.getTypedRuleContext(VarlistContext, 0);
};

StatContext.prototype.explist = function() {
  return this.getTypedRuleContext(ExplistContext, 0);
};

StatContext.prototype.functioncall = function() {
  return this.getTypedRuleContext(FunctioncallContext, 0);
};

StatContext.prototype.label = function() {
  return this.getTypedRuleContext(LabelContext, 0);
};

StatContext.prototype.NAME = function() {
  return this.getToken(LuaParser.NAME, 0);
};

StatContext.prototype.block = function(i) {
  if(i === undefined) {
    i = null;
  }
  if(i === null) {
    return this.getTypedRuleContexts(BlockContext);
  } else {
    return this.getTypedRuleContext(BlockContext, i);
  }
};

StatContext.prototype.exp = function(i) {
  if(i === undefined) {
    i = null;
  }
  if(i === null) {
    return this.getTypedRuleContexts(ExpContext);
  } else {
    return this.getTypedRuleContext(ExpContext, i);
  }
};

StatContext.prototype.namelist = function() {
  return this.getTypedRuleContext(NamelistContext, 0);
};

StatContext.prototype.funcname = function() {
  return this.getTypedRuleContext(FuncnameContext, 0);
};

StatContext.prototype.funcbody = function() {
  return this.getTypedRuleContext(FuncbodyContext, 0);
};

StatContext.prototype.enterRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.enterStat(this);
  }
};

StatContext.prototype.exitRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.exitStat(this);
  }
};

StatContext.prototype.accept = function(visitor) {
  if(visitor instanceof LuaVisitor) {
    return visitor.visitStat(this);
  } else {
    return visitor.visitChildren(this);
  }
};

LuaParser.StatContext = StatContext;

LuaParser.prototype.stat = function() {
  var localctx = new StatContext(this, this._ctx, this.state);
  this.enterRule(localctx, 4, LuaParser.RULE_stat);
  var _la = 0; // Token type
  try {
    this.state = 163;
    this._errHandler.sync(this);
    var la_ = this._interp.adaptivePredict(this._input, 6, this._ctx);
    switch (la_) {
      case 1:
        this.enterOuterAlt(localctx, 1);
        this.state = 82;
        this.match(LuaParser.T__0);
        break;

      case 2:
        this.enterOuterAlt(localctx, 2);
        this.state = 83;
        this.varlist();
        this.state = 84;
        this.match(LuaParser.T__1);
        this.state = 85;
        this.explist();
        break;

      case 3:
        this.enterOuterAlt(localctx, 3);
        this.state = 87;
        this.functioncall();
        break;

      case 4:
        this.enterOuterAlt(localctx, 4);
        this.state = 88;
        this.label();
        break;

      case 5:
        this.enterOuterAlt(localctx, 5);
        this.state = 89;
        this.match(LuaParser.T__2);
        break;

      case 6:
        this.enterOuterAlt(localctx, 6);
        this.state = 90;
        this.match(LuaParser.T__3);
        this.state = 91;
        this.match(LuaParser.NAME);
        break;

      case 7:
        this.enterOuterAlt(localctx, 7);
        this.state = 92;
        this.match(LuaParser.T__4);
        this.state = 93;
        this.block();
        this.state = 94;
        this.match(LuaParser.T__5);
        break;

      case 8:
        this.enterOuterAlt(localctx, 8);
        this.state = 96;
        this.match(LuaParser.T__6);
        this.state = 97;
        this.exp(0);
        this.state = 98;
        this.match(LuaParser.T__4);
        this.state = 99;
        this.block();
        this.state = 100;
        this.match(LuaParser.T__5);
        break;

      case 9:
        this.enterOuterAlt(localctx, 9);
        this.state = 102;
        this.match(LuaParser.T__7);
        this.state = 103;
        this.block();
        this.state = 104;
        this.match(LuaParser.T__8);
        this.state = 105;
        this.exp(0);
        break;

      case 10:
        this.enterOuterAlt(localctx, 10);
        this.state = 107;
        this.match(LuaParser.T__9);
        this.state = 108;
        this.exp(0);
        this.state = 109;
        this.match(LuaParser.T__10);
        this.state = 110;
        this.block();
        this.state = 118;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la === LuaParser.T__11) {
          this.state = 111;
          this.match(LuaParser.T__11);
          this.state = 112;
          this.exp(0);
          this.state = 113;
          this.match(LuaParser.T__10);
          this.state = 114;
          this.block();
          this.state = 120;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 123;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la === LuaParser.T__12) {
          this.state = 121;
          this.match(LuaParser.T__12);
          this.state = 122;
          this.block();
        }

        this.state = 125;
        this.match(LuaParser.T__5);
        break;

      case 11:
        this.enterOuterAlt(localctx, 11);
        this.state = 127;
        this.match(LuaParser.T__13);
        this.state = 128;
        this.match(LuaParser.NAME);
        this.state = 129;
        this.match(LuaParser.T__1);
        this.state = 130;
        this.exp(0);
        this.state = 131;
        this.match(LuaParser.T__14);
        this.state = 132;
        this.exp(0);
        this.state = 135;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la === LuaParser.T__14) {
          this.state = 133;
          this.match(LuaParser.T__14);
          this.state = 134;
          this.exp(0);
        }

        this.state = 137;
        this.match(LuaParser.T__4);
        this.state = 138;
        this.block();
        this.state = 139;
        this.match(LuaParser.T__5);
        break;

      case 12:
        this.enterOuterAlt(localctx, 12);
        this.state = 141;
        this.match(LuaParser.T__13);
        this.state = 142;
        this.namelist();
        this.state = 143;
        this.match(LuaParser.T__15);
        this.state = 144;
        this.explist();
        this.state = 145;
        this.match(LuaParser.T__4);
        this.state = 146;
        this.block();
        this.state = 147;
        this.match(LuaParser.T__5);
        break;

      case 13:
        this.enterOuterAlt(localctx, 13);
        this.state = 149;
        this.match(LuaParser.T__16);
        this.state = 150;
        this.funcname();
        this.state = 151;
        this.funcbody();
        break;

      case 14:
        this.enterOuterAlt(localctx, 14);
        this.state = 153;
        this.match(LuaParser.T__17);
        this.state = 154;
        this.match(LuaParser.T__16);
        this.state = 155;
        this.match(LuaParser.NAME);
        this.state = 156;
        this.funcbody();
        break;

      case 15:
        this.enterOuterAlt(localctx, 15);
        this.state = 157;
        this.match(LuaParser.T__17);
        this.state = 158;
        this.namelist();
        this.state = 161;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la === LuaParser.T__1) {
          this.state = 159;
          this.match(LuaParser.T__1);
          this.state = 160;
          this.explist();
        }

        break;
    }
  } catch(re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function RetstatContext(parser, parent, invokingState) {
  if(parent === undefined) {
    parent = null;
  }
  if(invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = LuaParser.RULE_retstat;
  return this;
}

RetstatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RetstatContext.prototype.constructor = RetstatContext;

RetstatContext.prototype.explist = function() {
  return this.getTypedRuleContext(ExplistContext, 0);
};

RetstatContext.prototype.enterRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.enterRetstat(this);
  }
};

RetstatContext.prototype.exitRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.exitRetstat(this);
  }
};

RetstatContext.prototype.accept = function(visitor) {
  if(visitor instanceof LuaVisitor) {
    return visitor.visitRetstat(this);
  } else {
    return visitor.visitChildren(this);
  }
};

LuaParser.RetstatContext = RetstatContext;

LuaParser.prototype.retstat = function() {
  var localctx = new RetstatContext(this, this._ctx, this.state);
  this.enterRule(localctx, 6, LuaParser.RULE_retstat);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 165;
    this.match(LuaParser.T__18);
    this.state = 167;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if(
      ((_la & ~0x1f) == 0 && ((1 << _la) & ((1 << LuaParser.T__16) | (1 << LuaParser.T__22) | (1 << LuaParser.T__23) | (1 << LuaParser.T__24) | (1 << LuaParser.T__25) | (1 << LuaParser.T__26) | (1 << LuaParser.T__30))) !== 0) ||
      (((_la - 43) & ~0x1f) == 0 &&
        ((1 << (_la - 43)) &
          ((1 << (LuaParser.T__42 - 43)) |
            (1 << (LuaParser.T__49 - 43)) |
            (1 << (LuaParser.T__52 - 43)) |
            (1 << (LuaParser.T__53 - 43)) |
            (1 << (LuaParser.NAME - 43)) |
            (1 << (LuaParser.NORMALSTRING - 43)) |
            (1 << (LuaParser.CHARSTRING - 43)) |
            (1 << (LuaParser.LONGSTRING - 43)) |
            (1 << (LuaParser.INT - 43)) |
            (1 << (LuaParser.HEX - 43)) |
            (1 << (LuaParser.FLOAT - 43)) |
            (1 << (LuaParser.HEX_FLOAT - 43)))) !==
          0)
    ) {
      this.state = 166;
      this.explist();
    }

    this.state = 170;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if(_la === LuaParser.T__0) {
      this.state = 169;
      this.match(LuaParser.T__0);
    }
  } catch(re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function LabelContext(parser, parent, invokingState) {
  if(parent === undefined) {
    parent = null;
  }
  if(invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = LuaParser.RULE_label;
  return this;
}

LabelContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LabelContext.prototype.constructor = LabelContext;

LabelContext.prototype.NAME = function() {
  return this.getToken(LuaParser.NAME, 0);
};

LabelContext.prototype.enterRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.enterLabel(this);
  }
};

LabelContext.prototype.exitRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.exitLabel(this);
  }
};

LabelContext.prototype.accept = function(visitor) {
  if(visitor instanceof LuaVisitor) {
    return visitor.visitLabel(this);
  } else {
    return visitor.visitChildren(this);
  }
};

LuaParser.LabelContext = LabelContext;

LuaParser.prototype.label = function() {
  var localctx = new LabelContext(this, this._ctx, this.state);
  this.enterRule(localctx, 8, LuaParser.RULE_label);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 172;
    this.match(LuaParser.T__19);
    this.state = 173;
    this.match(LuaParser.NAME);
    this.state = 174;
    this.match(LuaParser.T__19);
  } catch(re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function FuncnameContext(parser, parent, invokingState) {
  if(parent === undefined) {
    parent = null;
  }
  if(invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = LuaParser.RULE_funcname;
  return this;
}

FuncnameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FuncnameContext.prototype.constructor = FuncnameContext;

FuncnameContext.prototype.NAME = function(i) {
  if(i === undefined) {
    i = null;
  }
  if(i === null) {
    return this.getTokens(LuaParser.NAME);
  } else {
    return this.getToken(LuaParser.NAME, i);
  }
};

FuncnameContext.prototype.enterRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.enterFuncname(this);
  }
};

FuncnameContext.prototype.exitRule = function(listener) {
  if(listener instanceof LuaListener) {
    listener.exitFuncname(this);
  }
};

FuncnameContext.prototype.accept = function(visitor) {
  if(visitor instanceof LuaVisitor) {
    return visitor.visitFuncname(this);
  } else {
    return visitor.visitChildren(this);
  }
};

LuaParser.FuncnameContext = FuncnameContext;

LuaParser.prototype.funcname = function() {
  var localctx = new FuncnameContext(this, this._ctx, this.state);
  this.enterRule(localctx, 10, LuaParser.RULE_funcname);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 176;
    this.match(LuaParser.NAME);
    this.state = 181;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while(_la === LuaParser.T__20) {
      this.state = 177;
      this.match(LuaParser.T__20);
      this.state = 178;
      this.match(LuaParser.NAME);
      this.state = 183;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
    this.state = 186;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if(_la === LuaParser.T__21) {
      this.state = 184;
      this.match(LuaParser.T__21);
      this.state = 185;
      this.match(LuaParser.NAME);
    }
  } catch(re) {
    if(re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function VarlistContext(parser, parent, invokingState) {
  if(parent === undefined) {
    parent = null;
  }
  if(invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = LuaParser.RULE_varlist;
  return this;
}

VarlistContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarlistContext.prototype.constructor = VarlistContext;
